--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -7,11 +7,18 @@
   transform: translate(-50%, -40%);
   height: 80%;
   width: 55%;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-radius: 12px;
+
+  div .photo-list__fav-icon {
+    transform: scale(1.5);
+    margin-left: 20px;
+    top: 27px;
+  }
 }
 
 .photo-details-modal__close-button {
+  // position: fixed;
   background-color: white;
   border: none;
   color: white;
